bdr.BDR.scala.error
Compilation error:
BDR:52: error: unclosed character literal
if (getIndication() == ''){
                       ^BDR:52: error: ')' expected but something found.
if (getIndication() == ''){
                       ^BDR:56: error: illegal start of simple expression
} 
^