bdr.BDR.scala.code
var fin = 0


while (fin == 0){

if (getIndication() == "R"){
  right()
  forward()
}

if (getIndication() == "L"){
  left()
  forward()
}

if (getIndication() == "I"){
  right()
  right()
  forward()
}

if (getIndication() == "A"){
  forward()
}

if (getIndication() == "B"){
  forward()
  forward()
}

if (getIndication() == "C"){
  forward()
  forward()
  forward()
}

if (getIndication() == "Z"){
  backward()
}

if (getIndication() == "Y"){
  backward()
  backward()
}

if (getIndication() == "X"){
  backward()
  backward()
  backward()
} 

if (getIndication() == ''){
  fin = 1
}
  
}